# trading-bot

./: .env.compose  .env.template  .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: entity_decision_memo.md  hardening_checklist.md  model_change_log.md  regulations_summary.md  risk_policy.md
ingest/: candles_job.py  dummy.py  market_ws.py  news_stream.py  sec_fund.py  trends_job.py
ops/: main.py  secret_loader.py
ops/monitoring/: prometheus.yml
tests/: test_sanity.py
