[project]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Viggo Guerriero",email = "viggo@viggomichael.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "boto3 (>=1.39.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.4"

