[project]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Viggo Guerriero",email = "viggo@viggomichael.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "boto3 (>=1.39.10,<2.0.0)",
    "alpaca-py (>=0.42.0,<0.43.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "alpaca-trade-api (>=3.2.0,<4.0.0)",
    "sec-api (>=1.0.32,<2.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "arelle (>=2.2,<3.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pytrends (>=4.9.2,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.4"


